added light css styling.

--- a/movie_query/app/assets/stylesheets/application.css
+++ b/movie_query/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+ h1 {
+    font-size: 70px;
+    text-align: center;
+    }
+ h2 {
+   padding: 0px 0px 0px 50px;
+   }
+ p {padding: 10px 0px 0px 75px;}
