--- a/movie_query/app/views/movies/search.html.erb
+++ b/movie_query/app/views/movies/search.html.erb
@@ -1,4 +1,17 @@
 <h1>Movies Search</h1>
 
+
+
 <h2><%= @movie_title %></h2>
 <p><%= @movie_synopsis %></p>
+<p><%= @movie_year %></p>
+<p><%= @movie_mpaa_rating %></p>
+<p><%= @movie_runtime %></p>
+<p><%= @movie_rating_audience %></p>
+<p><%= @movie_rating_a_score %></p>
+<p><%= @movie_rating_critics %></p>
+<p><%= @movie_rating_c_score %></p>
+<p><%= @movie_release_theater %></p>
+<p><%= @movie_release_dvd  %></p>
+<p><%= image_tag @movie_poster_thumb  %></p>
+<p><%= image_tag @movie_poster_original %></p>
