--- a/movie_query/app/assets/stylesheets/movies.scss
+++ b/movie_query/app/assets/stylesheets/movies.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the movies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  padding: 10px 15px 10px 15px;
+}
+div {
+  padding: 0px 0px 5px 0px;
+}
