--- a/movie_query/app/assets/stylesheets/movies.scss
+++ b/movie_query/app/assets/stylesheets/movies.scss
@@ -2,8 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
-  padding: 10px 15px 10px 15px;
+  background: url('http://i.imgur.com/kqtQWWf.jpg');
+  background-size: cover;
+  height: 800px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center top;
 }
-div {
-  padding: 0px 0px 5px 0px;
-}
+
+
+.container {
+  background-color: white;
+  background-size: cover;
+  min-height: 800px;
+  max-width: 1000px;
+  }
