added google font.

--- a/movie_query/app/assets/stylesheets/movies.scss
+++ b/movie_query/app/assets/stylesheets/movies.scss
@@ -10,10 +10,13 @@ body {
   background-position: center top;
 }
 
-
 .container {
   background-color: white;
   background-size: cover;
   min-height: 800px;
   max-width: 1000px;
+  }
+
+.font {
+  font-family: 'Arvo', serif;
   }
