--- a/movie_query/app/views/layouts/application.html.erb
+++ b/movie_query/app/views/layouts/application.html.erb
@@ -13,11 +13,13 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
-<body>
 
-<div class="container">
-    <%= yield %>
-</div>
+<body class="font">
 
+  <div class="container">
+      <%= yield %>
+  </div>
+  <footer class="pull-right"><i><small>A Swizzle Sticks Creation</small></i></footer>
 </body>
+
 </html>
