--- a/assignment31_blog/app/views/articles/index.html
+++ b/assignment31_blog/app/views/articles/index.html
@@ -1,4 +1,5 @@
 <h1>Listing articles</h1>
+<%= link_to 'Home', controller: 'posts' %> |
 <%= link_to 'New article', new_article_path %>
 <table>
   <tr>
@@ -10,6 +11,8 @@
     <tr>
       <td><%= article.title %></td>
       <td><%= article.text %></td>
+      <td><%= link_to 'Show', article_path(article) %></td>
+      <td><%= link_to 'Edit', edit_article_path(article) %></td>
     </tr>
   <% end %>
 </table>
