added initial styling. assigned shorthand variables to routes. created post/title variables in posts_controller and welcome controller.

--- a/assignment31_blog/app/views/layouts/application.html.erb
+++ b/assignment31_blog/app/views/layouts/application.html.erb
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Assignment31Blog</title>
+  <title>Kyle's Blog</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
 </head>
 <body>
+<header>
+  <div class="container">
+    <div class="page-header">
+      <ul class="nav nav-pills pull-right">
+        <li>
+          <%= link_to "Home", root_url %>
+        </li>
+        <li>
+          <%= link_to "About", about_url %>
+        </li>
+      </ul>
+      <h1><%= link_to 'Kyle Swartz', root_url %><small> // A Swizzle Sticks Creation</small></h1>
+    </div>
+</header>
 
-<%= yield %>
+    <div class="row back_img">
+      <div class="col-md-6 col-md-offset-3">
+        <%= yield %>
+      </div>
+    </div>
 
 </body>
 </html>
