--- a/assignment31_blog/app/views/posts/index.html.erb
+++ b/assignment31_blog/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
-<%= link_to 'About Me', welcome_index_url %> |
-<%= link_to 'Post 1', posts_post_1_url %> |
-<%= link_to 'Post 2', posts_post_2_url %> |
-<%= link_to 'Post 3', posts_post_3_url %>
+<h1>Home</h1>
+<p>A blog of blogs</p>
+<%= link_to 'About Me', about_url %> |
+<%= link_to 'Post 1', post_1_url %> |
+<%= link_to 'Post 2', post_2_url %> |
+<%= link_to 'Post 3', post_3_url %>
