--- a/assignment31_blog/app/assets/stylesheets/application.css
+++ b/assignment31_blog/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+.back_img {
+    background: url('http://i.imgur.com/GqnuHbE.png');
+    background-size: cover;
+    min-height: 700px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center top;
+    }
