--- a/assignment31_blog/app/views/posts/post_1.html.erb
+++ b/assignment31_blog/app/views/posts/post_1.html.erb
@@ -1,3 +1,3 @@
-<h1>Posts#1</h1>
-<p>Find me in app/views/posts/post_1.html.erb</p>
+<h1><%= @title_1 %></h1>
+<p><%= @post_1 %></p>
 <%= link_to 'Home', root_url %>
