--- a/assignment31_blog/app/views/posts/post_3.html.erb
+++ b/assignment31_blog/app/views/posts/post_3.html.erb
@@ -1,3 +1,3 @@
-<h1>Posts#3</h1>
-<p>Find me in app/views/posts/open.html.erb</p>
+<h1><%= @title_3 %></h1>
+<p><%= @post_3 %></p>
 <%= link_to 'Home', root_url %>
