--- a/assignment31_blog/app/views/welcome/index.html.erb
+++ b/assignment31_blog/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1>About Me</h1>
-
+<p><%= @about_me %></p>
 <%= link_to 'Home', root_url %> |
-<%= link_to 'Post 1', posts_post_1_path %> |
-<%= link_to 'Post 2', posts_post_2_path %> |
-<%= link_to 'Post 3', posts_post_3_path %>
+<%= link_to 'Post 1', post_1_url %> |
+<%= link_to 'Post 2', post_2_url %> |
+<%= link_to 'Post 3', post_3_url %>
