Added about me text. Added breaking bad ipsum posts.

--- a/assignment31_blog/app/views/layouts/application.html.erb
+++ b/assignment31_blog/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 </head>
+
 <body class="font">
 
   <div class="fixed">
@@ -37,8 +38,8 @@
     <div class="col-md-3 col-md-offset-1">
       <a href= "/about" ><img src="http://i.imgur.com/2swaVz5.jpg" class="img-responsive" width="300" height="300"/></a>
       <div class="left_content">
-        <p>GitHub: <%= link_to 'kjswartz', "https://github.com/kjswartz" %></p>
-        <p>Twitter: <%= link_to 'kjswartz04', "https://twitter.com/kjswartz04" %></p>
+        <p><strong>GitHub:</strong> <%= link_to 'kjswartz', "https://github.com/kjswartz" %></p>
+        <p><strong>Twitter:</strong> <%= link_to 'kjswartz04', "https://twitter.com/kjswartz04" %></p>
       </div>
     </div>
 
