--- a/assignment31_blog/app/views/welcome/index.html.erb
+++ b/assignment31_blog/app/views/welcome/index.html.erb
@@ -1,9 +1,63 @@
 <h1>About Me</h1>
-<p><%= @about_me %></p>
+<p>
+  I am currently attending a 12 week intensive coding called The Iron Yard,
+  in Saint Petersburg, FL. It's funny, I really don't like to talk about myself
+  a lot because sometimes I feel it comes off as bragging. Granted, that may be
+  my fault due to the tone I use, and I've been told I can be a bit of a smart
+  aleck. While I am conscious of this and try not to display this side of me to
+  new people I meet, sometimes I slip, lol. I grew up in Michigan, in a small
+  town call St. Clair, about an hour north of Detroit. It’s funny looking back
+  now, I used to think that town was big and surrounded by everything. Having
+  lived in other states, and countries since I left ten years ago, I now see
+  how small and quaint it really was. Every time I go for a visit I feel like
+  I am visiting Mayberry from the Andy Griffith show. Although the economic
+  times have crippled the once beautiful Detroit and surrounding areas, I still
+  wouldn’t mind returning there one day.
+</p>
+<p>
+  There is definitely something to be said about the simpler life. I often feel
+  like people, including myself, have lost sight on the purpose of life. One of
+  my all time favorite quotes is from the movie Fight Club, ‘Advertising has us
+  chasing cars and clothes, working jobs we hate so we can buy shit we don't need.
+  We're the middle children of history, man. No purpose or place’. That was me
+  just a couple of months ago, working in a job I didn’t much care for, just so
+  I could rent an apartment and put gas in a car to drive myself to work.
+  People have always told me, ‘your job is just so you can pay for the things
+  you want to do and not who you are’. Given the current size of society, this
+  has to be true for some people. Society needs people willing to do the ‘dirty
+  jobs’ and yes that is a shout out to Mike Rowe, who I consider a great role
+  model. Although some people will always be willing to roll up their sleeves
+  for those dirty jobs of society, I’ve tried to always position myself in a
+  way that would always give me options. I’m not saying that I am against hard
+  work, far from it. I am only saying that I’ve always tried to live in a way
+  that wouldn’t force me into corners. I like to be able to remain mobile and
+  light, in such a way that if a fire burned everything I had in my apartment
+  right now, I wouldn’t mind.
+</p>
+<p>
+  I love the idea of small house living, granted I couldn’t do it because I
+  need a real size toilet, lol. But I’ve always wanted to live/travel in an RV,
+  or van camper. I could park in a gym parking lot, or at a campgrounds and use
+  their facilities no problem. A total combined time of just over two years
+  living/woking in the middle east (Iraq, Qatar, and Afghanistan), have given
+  me the ability to adapt to less than desirable bathroom facilities, lol.
+  Ever since I a kid watching Step by Step, and I was introduced to the character
+  who lived in his van in the driveway, I’ve wanted that lifestyle. I enjoy
+  reading articles and stories of individuals who don’t have homes, but instead
+  live and work out of hotels all around the world. They run their businesses,
+  or work remotely from wherever there is a wifi connection. A couple of sets
+  of clothes, a laptop, and my golf clubs is really  the only possessions
+  I need. Yes, I don’t ‘need’ my golf clubs, but I really enjoy golfing, lol.
+  I like to refer to going golfing as my way of going to church. I could stare
+  down the fairway all day enjoying the view and not be bored. Same thing with
+  the ocean, I just love sitting in the sand and listening to the sound of
+  the water.
+</p>
+<p>
+  Beyond that there isn’t much more about me. I’m a fairly plain individual
+  trying to live a simpler life, and hoping for the ability to become more
+  nomadic with the skills I’m acquiring from The Iron Yard.
+</p>
 
 
-
-<%= link_to 'Home', root_url %> |
-<%= link_to 'Post 1', post_1_url %> |
-<%= link_to 'Post 2', post_2_url %> |
-<%= link_to 'Post 3', post_3_url %>
+<%= link_to 'Home', root_url %>
