--- a/assignment31_blog/app/assets/stylesheets/application.css
+++ b/assignment31_blog/app/assets/stylesheets/application.css
@@ -38,11 +38,8 @@ body {
 .right_content {
   margin-top: 120px;
   min-height: 700px;
-  padding: 10px 30px 10px 30px;
-  background: -webkit-linear-gradient(#5DA3A6, #4A6989); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#5DA3A6, #4A6989); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#5DA3A6, #4A6989); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#5DA3A6, #4A6989); /* Standard syntax */
+  padding: 10px 30px 20px 30px;
+  background: #5DA3A6;
   opacity: 0.95;
   border-radius: 20px;
 }
@@ -71,6 +68,10 @@ img {
   font-family: 'Arvo', serif;
   text-align: justify;
   }
+
+p {
+    font-size: 16px;
+}
 
 a:link {color: #111057;}
 a:visited {color: #111057;}
