--- a/assignment31_blog/app/views/posts/post_1.html.erb
+++ b/assignment31_blog/app/views/posts/post_1.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @title_1 %></h1>
 <p><%= @post_1 %></p>
+<p><%= @post_1 %></p>
+<p><%= @post_1 %></p>
+<p><%= @post_1 %></p>
 <%= link_to 'Home', root_url %>
