--- a/assignment31_blog/app/views/posts/post_2.html.erb
+++ b/assignment31_blog/app/views/posts/post_2.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @title_2 %></h1>
 <p><%= @post_2 %></p>
+<p><%= @post_2 %></p>
+<p><%= @post_2 %></p>
+<p><%= @post_2 %></p>
 <%= link_to 'Home', root_url %>
