--- a/assignment31_blog/app/views/posts/post_3.html.erb
+++ b/assignment31_blog/app/views/posts/post_3.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @title_3 %></h1>
 <p><%= @post_3 %></p>
+<p><%= @post_3 %></p>
+<p><%= @post_3 %></p>
+<p><%= @post_3 %></p>
 <%= link_to 'Home', root_url %>
