--- a/assignment31_blog/app/views/posts/post_5.html.erb
+++ b/assignment31_blog/app/views/posts/post_5.html.erb
@@ -3,4 +3,4 @@
 <p><%= @post_5 %></p>
 <p><%= @post_5 %></p>
 <p><%= @post_5 %></p>
-<%= link_to 'Home', root_url %>
+<%= link_to image_tag("home.png", size: "25x25"), root_url %>
