--- a/movie_query/app/views/movies/search.html.erb
+++ b/movie_query/app/views/movies/search.html.erb
@@ -3,26 +3,22 @@
     <h1>Search For a Flick</h1>
   </div>
 
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <%= form_tag(root_path, method: "get") do %>
-        <div class="form-group">
-          <%= label_tag(:title, "Movie Title:") %>
-          <%= text_field_tag(:title) %>
-          <%= submit_tag("Search")  %>
-        </div>
+  <%= form_tag(root_path, method: "get", class:"form-inline", style:"padding-left:300px;") do %>
+    <div class="form-group">
+      <%= label_tag(:title, "Movie Title:") %>
+      <%= text_field_tag(:title, nil, class: "form-control", placeholder: "Enter Movie Title") %>
     </div>
-  </div>
+    <button type="submit" class="btn btn-default">Search</button>
   <% end %>
 
 <% else %>
 
-  <%= form_tag(movies_search_path, method: "get") do %>
-  <div class="form-group", style="padding-top:10px;">
+  <%= form_tag(movies_search_path, method: "get", class:"form-inline", style:"padding:10px;") do %>
+  <div class="form-group">
     <%= label_tag(:title, "Movie Title:") %>
-    <%= text_field_tag(:title) %>
-    <%= submit_tag("Search")  %>
+    <%= text_field_tag(:title, nil, class: "form-control", placeholder: "Enter Movie Title") %>
   </div>
+  <button type="submit" class="btn btn-default">Search</button>
   <% end %>
 
 
