--- a/assignment33_jobs/app/views/jobs/new.html.erb
+++ b/assignment33_jobs/app/views/jobs/new.html.erb
@@ -1,5 +1,20 @@
-<h1>New Job</h1>
+<div class="page-header">
+  <ul class="nav nav-pills pull-right">
+    <li class="active">
+      <%= link_to 'Back', jobs_path %>
+    </li>
+    <li class="active">
+      <%= link_to "Home", root_path %>
+    </li>
+  </ul>
+  <h1>New Job</h1>
+</div>
+
 
 <%= render 'form' %>
-
-<%= link_to 'Back', jobs_path %>
+</br>
+<ul class="nav nav-pills pull-left">
+  <li class="active">
+    <%= link_to 'Cancel', jobs_path %>
+  </li>
+</ul>
