--- a/assignment33_jobs/app/views/jobs/show.html.erb
+++ b/assignment33_jobs/app/views/jobs/show.html.erb
@@ -1,3 +1,15 @@
+<div class="page-header">
+  <ul class="nav nav-pills pull-right">
+    <li class="active">
+      <%= link_to 'All Jobs', jobs_path %>
+    </li>
+    <li class="active">
+      <%= link_to "Home", root_path %>
+    </li>
+  </ul>
+  <h1><%= @job.company %> <small>// <%= @job.title %></small></h1>
+</div>
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -40,5 +52,9 @@
   <%= @job.posted %>
 </p>
 
-<%= link_to 'Edit', edit_job_path(@job) %> |
-<%= link_to 'Back', jobs_path %>
+
+<ul class="nav nav-pills pull-left">
+  <li class="active">
+    <%= link_to 'Edit', edit_job_path(@job) %>
+  </li>
+</ul>
