--- a/assignment33_jobs/app/views/welcome/index.html.erb
+++ b/assignment33_jobs/app/views/welcome/index.html.erb
@@ -1,3 +1,19 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
-<%= link_to "Job Postings", jobs_path %>
+<div class="jumbotron">
+  <h1>Jobs Listing Site</h1>
+  <ul class="nav nav-pills pull-right">
+    <li class="active">
+      <%= link_to "All Job Listings", jobs_path %>
+    </li>
+  </ul>
+</div>
+
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <% @jobs.each do |job| %>
+        <h3><%= link_to job['title'], job %></h3>
+        <%= truncate(job['description'], length: 250) %>
+      </br></br>
+    <% end %>
+
+  </div>
+</div>
