added association of child class Applicant to parent Job.

--- a/assignment33_jobs/app/views/jobs/show.html.erb
+++ b/assignment33_jobs/app/views/jobs/show.html.erb
@@ -7,7 +7,7 @@
       <%= link_to "Home", root_path %>
     </li>
   </ul>
-  <h1><%= @job.company %> <small>// <%= @job.title %></small></h1>
+  <h1><%= @job.title %></h1>
 </div>
 
 <p id="notice"><%= notice %></p>
